--- a/config/locales/af.yml
+++ b/config/locales/af.yml
@@ -566,7 +566,7 @@ af:
     support:                                    "Need help with YouVersion?"
     lead copy:                                  "Gebasseer op die aanlyn Bybel, YouVersion.com, is die Bybel App 'n gratis mobiele Bybel wat op byna enige selfoon geïnstalleer kan word. Die Bybel App laat  gebruikers toe om die Bybel te lees, om verse met hul sosiale netwerke te deel, om hul gunsteling gedeeltes te boekmerk, en meer; alles in 'n ​​formaat wat tred hou met hul toenemende mobiele leefstyl."
     resources title:                            "Media Hulpbronne"
-    now title:                                  "do not translate"
+    now title:                                  "Today in the YouVersion Community"
     resources:
       now:                                      "A live look at engagement and the latest data"
       about:                                    "Oor YouVersion en The Bible App"
