--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -353,9 +353,9 @@ de:
       confirm password:                         "Passwort bestätigen"
       avatar file:                              "Wähle eine Datei für dein Bild aus."
       avatar help:                              "Folgende Bildformate sind möglich: JPG, PNG oder GIF. Dein Bild wird in ein 48x48 Miniaturbild umgewandelt. Die maximale Dateigröße beträgt 1MB."
-      picture error:                            "Sorry, there was an error updating your picture."
-      picture_too_large:                        "Picture should be less than 1 megabyte"
-      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
+      picture error:                            "Entschuldigung, es gab einen Fehler, als dein Bild aktualisiert wurde."
+      picture_too_large:                        "Das Bild muss kleiner als 1 Megabyte sein"
+      picture_invalid_type:                     "Das Bild muss JPG, PNG oder GIF Format haben."
       updated picture:                          "Du hast dein Bild erfolgreich aktualisiert."
       updated notifications:                    "Du hast deine Benachrichtigungseinstellungen erfolgreich aktualisiert."
       notification errors:                      "Der folgende Fehler hat die Änderung deiner Benachrichtigungen verhindert:"
@@ -391,10 +391,10 @@ de:
     confirm delete:                             "Ja, ich bin sicher."
     loading:                                    "Deine Lesezeichen werden geladen..."
     edit bookmark:                              "Lesezeichen bearbeiten"
-    reference:                                  "Reference:"
-    labels comma separated:                     "Labels (comma-separated):"
+    reference:                                  "Bezug:"
+    labels comma separated:                     "Stichwörter (durch Komma getrennt):"
     update:                                     "Aktualisieren"
-    color:                                      "Color:"
+    color:                                      "Farbe:"
     version field:                              "Version:"
   badges:
     earned a badge:                             "Abzeichen verdient"
@@ -563,12 +563,12 @@ de:
     blog:                                       "YouVersion-Blog"
     facebook:                                   "YouVersion auf Facebook"
     twitter:                                    "YouVersion auf Twitter"
-    support:                                    "Need help with YouVersion?"
+    support:                                    "Brauchst du Hilfe mit YouVersion?"
     lead copy:                                  "Basierend auf der Online Bibel, ist die YouVersion.com eine kostenlose Bibel App, die auf fast jedem Smartphone installiert werden kann. Die Bibel App ermöglicht es den Nutzern, die Bibel zu lesen, Verse mit ihren sozialen Netzwerken auszutauschen, ihre liebsten Passagen mit Lesezeichen zu versehen und vieles mehr&mdash; alles in einem Format, das zu ihrem zunehmend mobilen Lebensstil passt."
     resources title:                            "Presseinformationen"
     now title:                                  "Heute in der YouVersion-Gemeinschaft"
     resources:
-      now:                                      "A live look at engagement and the latest data"
+      now:                                      "Ein aktueller Blick auf das Engagement und die letzten Zahlen"
       about:                                    "Über YouVersion und die Bibel App"
       history:                                  "YouVersion-Geschichte und Statistiken"
       manual:                                   "YouVersion Markenzeichen Handbuch"
@@ -581,8 +581,8 @@ de:
       ipad:                                     "Bildauswahl: iPad"
       android:                                  "Bildauswahl: Android"
       blackberry:                               "Bildauswahl: BlackBerry"
-      win phone 7:                              "Image Collection: Windows Phone 7"
-      windows 8:                                "Image Collection: Windows 8"
+      win phone 7:                              "Bilder-Sammlung: Windows Phone 7"
+      windows 8:                                "Bilder-Sammlung: Windows 8"
       lifestyle:                                "Bildauswahl: Lifestyle"
       screencast:                               "YouVersion-Screencast"
     links title:                                "Links zur Medienberichterstattung"
