--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -58,7 +58,7 @@ km:
   my notifications:                             "គ្រប់​គ្រងការ​ដាស់​តឿន"
   my connections:                               "បាន​ភ្ជាប់​ទៅ​គណនី"
   my devices:                                   "បាន​ភ្ជាប់​ជាមួយ​ឧបករណ៍"
-  language name:                                "ខ្មែរ"
+  language name:                                "ភាសា​ខ្មែរ"
   sign in:                                      "Sign in"
   sign up:                                      "ចុះ​ឈ្មោះ​"
   have an account:                              "មាន​គណនី​រួច​ហើយ​?"
@@ -232,7 +232,7 @@ km:
     my badges:                                  "ផ្លាក​សញ្ញា​របស់​ខ្ញុំ"
     revised date:                               "កំនែរ​ចុង​ក្រោយ​នៅ​ %{date}"
     update email copy:                          "បញ្ជូល​អ៊ី​ម៉ែល​ថ្មី ហើយ​ចុច បន្ទាន់​សម័យ​អ៊ី​ម៉ែល។ យើង​នឹង​ផ្ញើរ​តំណរ​មួយ​ដើម្បី​បញ្ជាក់​ពី​អ៊ី​ម៉ែល​ថ្មី​របស់​អ្នក។"
-    edit email:                                 "បន្ទាន់​សម័យអាស័យដ្ឋាន​អ៊ី​ម៉ែល"
+    edit email:                                 "បន្ទាន់​សម័យ​អ៊ី​ម៉ែល"
     update email check:                         "សូម​ឆែក​អ៊ី​ម៉ែល ហើយ​ចុច​លើ​តំណរ​ភ្ជាប់ ដើម្បី​បញ្ជាក់​ពី​អ៊ី​ម៉ែល​ថ្មី​របស់​អ្នក។"
     confirm update email success:               "អរគុណ! លោក​អ្នក​បាន​បន្ទាន់​សម័យ​នូវ​អាស័យដ្ឋាន​អ៊ី​ម៉ែល​ហើយ។"
     confirm update email error:                 "សូម​ទោស មាន​បញ្ហា​ក្នុង​ការ​បញ្ចប់​ការ​ប្ដូរ​អាស័យដ្ឋាន​អ៊ី​ម៉ែល​របស់​អ្នក។"
@@ -367,7 +367,7 @@ km:
       old was invalid:                          "សូម​ទោស អ្នក​ត្រូវ​បញ្ចូល​ពាក្យ​សម្ងាត់​ចាស់អោយ​បាន​ត្រឹម​ត្រូវ​ដើម្បី​ប្ដូរ​ពាក្យ​សម្ងាត់​របស់​អ្នក។"
     notifications:
       badges:                                   "ប្រាប់​ខ្ញុំ​អោយ​ដឹងអំពីផ្លាក​សញ្ញា​ដែល​ខ្ញុំ​ទទួល​បាន"
-      follower:                                 "ប្រាប់​ខ្ញុំ​អោយដឹង​ពេល​មាន​អ្នក​ដើរ​តាម​ខ្ញុំ"
+      follower:                                 "ប្រាប់​ខ្ញុំ​អោយដឹង​ពេល​មាន​អ្នក​​តាម​ខ្ញុំ"
       newsletter:                               "សូម​ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពេល​មាន​ដំណឹង​ថ្មីៗ​ពី YouVersion"
       note_like:                                "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពេល​មាន​អ្នក​ចូល​ចិត្ត​កំណត់​ត្រា​របស់​ខ្ញុំ"
       reading_plans:                            "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពី​ព័ត៌មាន​សំរាប់​គំរោង​អាន​ដែល​ខ្ញុំ​បាន​ចាប់​ផ្ដើម។"
