--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -353,9 +353,9 @@ nl:
       confirm password:                         "Bevestig Wachtwoord"
       avatar file:                              "Selecteer een bestand voor je foto"
       avatar help:                              "Foto's kunnen in JPG-, PNG-of GIF-formaat zijn. Je foto wordt omgezet in een 48x48 miniatuur. De maximale bestandsgrootte is 1 MB."
-      picture error:                            "Sorry, there was an error updating your picture."
-      picture_too_large:                        "Picture should be less than 1 megabyte"
-      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
+      picture error:                            "Sorry, er is een fout opgetreden bij het uploaden van uw foto."
+      picture_too_large:                        "Foto zou kleiner moeten zijn dan 1 megabyte"
+      picture_invalid_type:                     "Fotot zou JPG, PNG of GIF moeten zijn"
       updated picture:                          "Gelukt! Je hebt je foto bijgewerkt."
       updated notifications:                    "Succes! Je hebt je meldingsinstellingen bijgewerkt."
       notification errors:                      "De volgende fout(en) voorkomen dat je jouw notificaties can updaten:"
@@ -391,11 +391,11 @@ nl:
     confirm delete:                             "Ja, ik weet het zeker."
     loading:                                    "Laden van uw bladwijzers ..."
     edit bookmark:                              "Bladwijzers Aanpassen"
-    reference:                                  "Reference:"
-    labels comma separated:                     "Labels (comma-separated):"
+    reference:                                  "Verwijzing:"
+    labels comma separated:                     "Labels (gescheiden door komma):"
     update:                                     "Update"
-    color:                                      "Color:"
-    version field:                              "Version:"
+    color:                                      "Kleur:"
+    version field:                              "Versie:"
   badges:
     earned a badge:                             "Eerbetoon Verdiend"
     user badges:                                "%{user}'s Eerbetoon"
@@ -563,7 +563,7 @@ nl:
     blog:                                       "YouVersion Blog"
     facebook:                                   "YouVersion op Facebook"
     twitter:                                    "YouVersion op Twitter"
-    support:                                    "Need help with YouVersion?"
+    support:                                    "Hulp nodig met YouVersion?"
     lead copy:                                  "Gebaseerd op de online Bijbel, YouVersion.com, de Bijbel App is een gratis mobiele Bijbel die op bijna alle toestellen kan worden geinstalleerd. De Bijbel App stelt gebruikers in staat om de Bijbel te lezen, verzen te delen op de sociale netwerken, bladwijzers te plaatsen bij favoriete passages, en meer&mdash; allemaal in een format die past bij de toenemend mobiele levenstijl."
     resources title:                            "Pers Bronnen"
     now title:                                  "Vandaag in de YouVersion Gemeenschap"
@@ -581,8 +581,8 @@ nl:
       ipad:                                     "Afbeelding Collectie: iPad"
       android:                                  "Afbeelding Collectie: Android"
       blackberry:                               "Afbeelding Collectie: BlackBerry"
-      win phone 7:                              "Image Collection: Windows Phone 7"
-      windows 8:                                "Image Collection: Windows 8"
+      win phone 7:                              "Beelden verzameling: Windows Phone 7"
+      windows 8:                                "Beelden verzameling: Windows 8"
       lifestyle:                                "Afbeelding Collectie: Levensstijl"
       screencast:                               "YouVersion Screencast"
     links title:                                "Media Verslagen Links"
