--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -1,6 +1,6 @@
 ---
 sv:
-  celebrating 50MM:                             "Fira 50 miljoner installationer!"
+  celebrating 50MM:                             "Firar 50 miljoner installationer!"
   link:                                         "Länk"
   site search:                                  "YouVersion-sök"
   auth error:                                   "Det var ett problem med ditt användarnamn eller lösenord. Logga in på YouVersion för att fortsätta."
@@ -33,7 +33,7 @@ sv:
   you are now following:                        "Du följer nu %{username}"
   you are no longer following:                  "Du följer inte längre %{username}"
   user follows:                                 "%{user} följer dig."
-  user does not follow:                         "Håll mig uppdaterad om nyheter från YouVersions innehållspartner."
+  user does not follow:                         "%{user} följer inte dig."
   no following found self:                      "Du följer ingen ännu. Gå till <a href='%{link}'>hitta vänner</a> och hitta några vänner!"
   no followers found self:                      "Du har inga följare ännu. Gå till <a href='%{link}'>hitta vänner</a> och hitta några vänner!"
   no followers found other:                     "Ingen följer %{username} ännu."
@@ -303,7 +303,7 @@ sv:
       international title:                      "Särskilda förmaningar för internationell användning"
       international text:                       "Genom att känna till den globala karaktären av Internet, samtycker du till att följa alla lokala regler för beteende på nätet och godtagbart innehåll. Specifikt samtycker du till att följa alla tillämpliga lagar om överföring av teknisk data som exporteras från USA eller det land där du bor."
       content title:                            "Innehåll inskickad eller tillgängliggjord för att inkluderas i tjänsten"
-      content text:                             "LifeChurch.tv gör inte anspråk på äganderätten till innehållet du skickar eller göra tillgänglig för införande på YouVersion. Men när det gäller innehåll som du lämna eller göra tillgänglig för införande på allmänt tillgängliga områden av YouVersion ger du LifeChurch.tv följande globala, royalty-fria och icke-exklusiva licens(er): %{line_break}Med avseende på innehåll du lämna eller göra tillgänglig för införande i allmänt tillgängliga områden av YouVersion ger du tillstånd att använda, distribuera, reproducera, ändra, anpassa, offentligt framföra och offentligt visa sådant innehåll på YouVersion, i syfte att tillhandahålla och främja det specifika YouVersion-område till vilket innehåll lämnades eller gjordes tillgängligt. Denna licens gäller endast så länge som du väljer att fortsätta att inkludera innehållet på YouVersion och avslutas vid den tidpunkt du tar bort eller LifeChurch.tv bort innehållet från YouVersion. %{line_break}Med avseende på innehåll annat än fotografier, grafik, ljud eller video du skickar in eller gör tillgänglig för införande i allmänt tillgängliga områden på YouVersion ger du evigt, oåterkalleligt och helt underlicensierat tillstånd att använda, distribuera, reproducera, ändra, anpassa, publicera, översätta, offentligt framföra och offentligt visa innehållet (i sin helhet eller delvis) och att införliva innehållet i andra verk i alla nu kända eller framtida format eller medium. %{line_break}\"Publikt tillgängligt.\" \"Publikt tillgängliga\" områden på YouVersion är de områden som är avsedda att vara tillgängliga för allmänheten. Allmänt tillgängliga områden på YouVersion inkluderar, men är inte begränsade till, anslagstavlor, bloggkommentarer, communities och forum som är öppna för både medlemmar och besökare."
+      content text:                             "LifeChurch.tv gör inte anspråk på äganderätten till innehållet du skickar eller göra tillgänglig för införande på YouVersion. Men när det gäller innehåll som du lämna eller göra tillgänglig för införande på allmänt tillgängliga områden av YouVersion ger du LifeChurch.tv följande globala, royalty-fria och icke-exklusiva licens(er): %{line_break}Med avseende på innehåll du lämna eller göra tillgänglig för införande i allmänt tillgängliga områden av YouVersion ger du tillstånd att använda, distribuera, reproducera, ändra, anpassa, offentligt framföra och offentligt visa sådant innehåll på YouVersion, i syfte att tillhandahålla och främja det specifika YouVersion-område till vilket innehåll lämnades eller gjordes tillgängligt. Denna licens gäller endast så länge som du väljer att fortsätta att inkludera innehållet på YouVersion och avslutas vid den tidpunkt du tar bort eller LifeChurch.tv bort innehållet från YouVersion. %{line_break}Med avseende på innehåll annat än fotografier, grafik, ljud eller video du skickar in eller gör tillgänglig för införande i allmänt tillgängliga områden på YouVersion ger du evigt, oåterkalleligt och helt återlicensierat tillstånd att använda, distribuera, reproducera, ändra, anpassa, publicera, översätta, offentligt framföra och offentligt visa innehållet (i sin helhet eller delvis) och att införliva innehållet i andra verk i alla nu kända eller framtida format eller medium. %{line_break}\"Publikt tillgängligt.\" \"Publikt tillgängliga\" områden på YouVersion är de områden som är avsedda att vara tillgängliga för allmänheten. Allmänt tillgängliga områden på YouVersion inkluderar, men är inte begränsade till, anslagstavlor, bloggkommentarer, communities och forum som är öppna för både medlemmar och besökare."
       contributions title:                      "Bidrag till LifeChurch.tv"
       contributions text:                       "Genom att skicka in idéer, tankar, dokument och/eller förslag (”bidrag”) till LifeChurch.tv bekräftar och accepterar du att:%{item}(a) dina bidrag inte innehåller konfidentiell eller skyddad information, %{item}(b) tystnadsplikt inte krävs av LifeChurch.tv, uttryckligen eller underförstått, med avseende på bidraget,%{item}(c) LifeChurch.tv skall ha rätt att använda eller avslöja (eller välja att inte använda eller avslöja) bidrag för valfritt ändamål, på något sätt, i alla medier i hela världen, %{item}(d) LifeChurch.tv kan ha något som liknar bidraget som redan är föremål för undersökning eller under utveckling, %{item}(e) ert bidrag automatiskt bli egendom till LifeChurch.tv utan några som helst skyldighet mellan LifeChurch.tv och dig, och %{item}(f) du har inte rätt till någon kompensation eller ersättning av något slag från LifeChurch.tv under några omständigheter."
       indemnity title:                          "Skadestånd och friskrivning"
@@ -353,9 +353,9 @@ sv:
       confirm password:                         "Bekräfta lösenord"
       avatar file:                              "Välj en fil för din bild"
       avatar help:                              "Bilder kan vara i JPG-, PNG- eller GIF-format. Din bild kommer att konverteras till en miniatyr på 48x48. Maximal filstorlek är 1 MB."
-      picture error:                            "Sorry, there was an error updating your picture."
-      picture_too_large:                        "Picture should be less than 1 megabyte"
-      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
+      picture error:                            "Ett fel uppstod vid uppdatering av din bild."
+      picture_too_large:                        "Bilden måste vara mindre än 1 megabyte"
+      picture_invalid_type:                     "Bilden måste vara JPG, PNG eller GIF"
       updated picture:                          "Du har uppdaterat din bild."
       updated notifications:                    "Du har uppdaterat dina meddelandeinställningar."
       notification errors:                      "Följande fel förhindrade dig att uppdatera dina meddelanden:"
@@ -371,7 +371,7 @@ sv:
       newsletter:                               "Håll mig uppdaterad om tillkännagivanden från YouVersion."
       note_like:                                "Meddela mig när någon gillar mina anteckningar."
       reading_plans:                            "Meddela mig med information för läsplaner jag startat."
-      publishing partners:                      "Håll mig uppdaterad om nyheter från YouVersions innehållspartner"
+      publishing partners:                      "Håll mig uppdaterad om nyheter från YouVersions innehållspartner."
       update:                                   "Uppdateringsmeddelanden"
   bookmarks:
     edit:                                       "Ändra"
@@ -391,11 +391,11 @@ sv:
     confirm delete:                             "Ja, jag är säker."
     loading:                                    "Laddar dina bokmärken..."
     edit bookmark:                              "Redigera bokmärke"
-    reference:                                  "Reference:"
-    labels comma separated:                     "Labels (comma-separated):"
+    reference:                                  "Referens:"
+    labels comma separated:                     "Etiketter (kommaseparerade)"
     update:                                     "Uppdatera"
-    color:                                      "Color:"
-    version field:                              "Version:"
+    color:                                      "Färg:"
+    version field:                              "Översättning:"
   badges:
     earned a badge:                             "Fått ett emblem"
     user badges:                                "%{user}s emblem"
@@ -563,12 +563,12 @@ sv:
     blog:                                       "YouVersion Blogg"
     facebook:                                   "YouVersion på Facebook"
     twitter:                                    "YouVersion på Twitter"
-    support:                                    "Need help with YouVersion?"
+    support:                                    "Behöver hjälp med YouVersion?"
     lead copy:                                  "Bibelappen, baserad på online-Bibeln YouVersion.com, är en gratis mobil-Bibel som kan installeras på nästan alla telefoner. Bibelappen låter användare läsa Bibeln, dela verser i sina sociala nätverk, bokmärka sina favoritpassager och mer&mdash;allt i ett format som håller jämna steg med den mobila livsstilen."
     resources title:                            "Pressinformation"
     now title:                                  "Idag i YouVersion-gemenskapen"
     resources:
-      now:                                      "A live look at engagement and the latest data"
+      now:                                      "En levande bild över engagemang och senaste datat"
       about:                                    "Om YouVersion och Bibelappen"
       history:                                  "YouVersions historia och statistik"
       manual:                                   "YouVersions varumärkesguide"
@@ -581,8 +581,8 @@ sv:
       ipad:                                     "Bildsamling: iPad"
       android:                                  "Bildsamling: Android"
       blackberry:                               "Bildsamling: BlackBerry"
-      win phone 7:                              "Image Collection: Windows Phone 7"
-      windows 8:                                "Image Collection: Windows 8"
+      win phone 7:                              "Bildsamling: Windows Phone 7"
+      windows 8:                                "Bildsamling: Windows 8"
       lifestyle:                                "Bildsamling: Livsstil"
       screencast:                               "YouVersion-presentation"
     links title:                                "Länkar till media"
