--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -353,9 +353,9 @@ ru:
       confirm password:                         "Подтвердить пароль"
       avatar file:                              "Выберить файл с фотографией"
       avatar help:                              "Фотографии могут быть в формате JPG, PNG или GIF. Ваша фотография будет конвертирована в миниатюру размером 48х48. Максимальный размер файла 1 Мб."
-      picture error:                            "Sorry, there was an error updating your picture."
-      picture_too_large:                        "Picture should be less than 1 megabyte"
-      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
+      picture error:                            "Извините, при обновлении фотографии возникла ошибка."
+      picture_too_large:                        "Размер фотографии должен быть меньше 1 Мб"
+      picture_invalid_type:                     "Фотография должна быть в формате JPG, PNG, или GIF "
       updated picture:                          "Фотография успешно обновлена."
       updated notifications:                    "Настройки уведомлений успешно обновлены."
       notification errors:                      "Следующая ошибка помешала обновлению настроек:"
@@ -391,11 +391,11 @@ ru:
     confirm delete:                             "Да, удалить"
     loading:                                    "Загружаю закладки..."
     edit bookmark:                              "Редактировать закладку"
-    reference:                                  "Reference:"
-    labels comma separated:                     "Labels (comma-separated):"
+    reference:                                  "Ссылка:"
+    labels comma separated:                     "Ярлыки (через запятую):"
     update:                                     "Обновить"
-    color:                                      "Color:"
-    version field:                              "Version:"
+    color:                                      "Цвет:"
+    version field:                              "Перевод "
   badges:
     earned a badge:                             "Заработан значок"
     user badges:                                "Значки %{user}"
@@ -563,12 +563,12 @@ ru:
     blog:                                       "Блог YouVersion"
     facebook:                                   "YouVersion на Facebook"
     twitter:                                    "YouVersion в Twitter"
-    support:                                    "Need help with YouVersion?"
+    support:                                    "Нужна помощь по YouVersion?"
     lead copy:                                  "Основанное на онлайн Библии YouVersion.com, Приложение Библия является бесплатной мобильной Библией, которая может быть установлена ​​практически на любой телефон. Приложение Библия позволяет пользователям читать Библию, делиться стихами через социальные сети, добавлять в закладки любимые места и многое другое &mdash; и все это доступно в формате, идущем в ногу с всё более мобильным образом жизни современного человека."
     resources title:                            "Для для прессы"
     now title:                                  "Сегодня в сообществе YouVersion"
     resources:
-      now:                                      "A live look at engagement and the latest data"
+      now:                                      "Текущая активность в реальном времени"
       about:                                    "О YouVersion и Приложении Библия"
       history:                                  "История и статистика YouVersion"
       manual:                                   "Руководство по использованию бренда YouVersion"
@@ -581,8 +581,8 @@ ru:
       ipad:                                     "Колекция изображений: iPad"
       android:                                  "Колекция изображений: Android"
       blackberry:                               "Колекция изображений: BlackBerry"
-      win phone 7:                              "Image Collection: Windows Phone 7"
-      windows 8:                                "Image Collection: Windows 8"
+      win phone 7:                              "Коллекция изображений: Window Phone 7"
+      windows 8:                                "Коллекция изображений: Windows 8"
       lifestyle:                                "Колекция изображений: Стиль жизни"
       screencast:                               "Скринкаст YouVersion"
     links title:                                "Ссылки на трансляции в масс медиа"
