--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -60,7 +60,7 @@ pt-BR:
   my devices:                                   "Dispositivos Conectados"
   language name:                                "Português"
   sign in:                                      "Sign in"
-  sign up:                                      "Cadastrar-se"
+  sign up:                                      "Cadastre-se"
   have an account:                              "Já Tem uma Conta?"
   no account:                                   "Não Tem uma Conta?"
   successful sign-in:                           "Conectado como %{user}!"
@@ -184,7 +184,7 @@ pt-BR:
     creation form errors:                       "O(s) seguinte(s) erro(s) impediu(ram) a criação de sua conta:"
     profile form errors:                        "O(s) seguinte(s) erro(s) impediu(ram) a atualização do seu perfil:"
     email address:                              "Endereço de e-mail"
-    user name:                                  "Nome do Usuário"
+    user name:                                  "Nome de Usuário"
     agreement:                                  "Eu concordo com os %{terms_link} do YouVersion."
     terms and conditions:                       "termos e condições"
     facebook sign up success:                   "Ótimo! Você se vinculou com o Facebook. Escolha um nome de usuário e senha no YouVersion para continuar."
@@ -402,7 +402,7 @@ pt-BR:
     user badges:                                "Medalhas de %{user}"
   plans:
     title:                                      "Planos de Leitura"
-    browse by category:                         "Navegar por Categoria"
+    browse by category:                         "Buscar por Categoria"
     browse plans:                               "Procurar %{category} Planos"
     swap list localization:                     "(<a href='%{swap_link}'>Ver em %{swap_locale}</a>)"
     showing language filtered:                  "Mostrando apenas os planos de leitura disponíveis em %{lang_name}"
@@ -494,10 +494,10 @@ pt-BR:
     must start to complete:                     "Comece este plano para salvar as leituras completadas!"
   registration:
     with facebook:                              "Registre-se com Facebook"
-    benefits title:                             "Tenha a Experiência Completa"
-    benefits blurb:                             "Criar uma conta no YouVersion te dá acesso a mais recursos, como marcadores e anotações. Eles aparecerão em qualquer dispositivo em que você estiver conectado. Uma conta também facilita o compartilhar da Bíblia com amigos, então utilize um ou dois minutos e inscreva-se!"
+    benefits title:                             "Obtenha a Experiência Completa"
+    benefits blurb:                             "Criar uma conta no YouVersion lhe dá acesso a mais recursos, como marcadores e anotações. Eles aparecerão em qualquer dispositivo em que você estiver conectado. Uma conta também facilita o compartilhamento da Bíblia com amigos, então use um ou dois minutos e se inscreva!"
     plan blurb:                                 "Parece que você quer iniciar um Plano de Leitura. Muito bem! Os Planos de Leitura podem te ajudar a fazer com que a Bíblia seja uma parte do seu cotidiano. Acesse ou crie uma conta abaixo e comece!"
-    bookmark blurb:                             "Parece que você quer usar um Marcador. Ótimo! Os marcadores te ajudam a acompanhar versículos que você queira memorizar, compartilhar ou marcar como favoritos. Acesse ou crie uma conta abaixo e comece!"
+    bookmark blurb:                             "Parece que você quer usar um Marcador. Ótimo! Os marcadores o ajudam a acompanhar versículos que você queira memorizar, compartilhar ou marcar como favorito. Acesse ou crie uma conta abaixo e comece!"
     friends blurb:                              "Parece que você quer interagir com Amigos. Boa ideia! Vocês poderão compartilhar o que tem aprendido e ajudar uns aos outros a se manter em dia com suas metas de leitura. Acesse ou crie uma conta abaixo e comece!"
     highlight blurb:                            "Parece que você quer fazer uma marcação na escritura. Excelente! Marcadores te ajudam a organizar e lembrar de seus versículos favoritos. Acesse ou crie uma conta abaixo e comece!"
     note blurb:                                 "Parece que você quer fazer uma anotação sobre a escritura. Boa ideia! As anotações podem te ajudar a lembrar e organizar a verdade que você descobre na Palavra de Deus. Acesse ou crie uma conta abaixo e comece!"
@@ -542,8 +542,8 @@ pt-BR:
     zip:                                        "Código Postal"
   download ad:
     title:                                      "Baixe o App gratuito da Bíblia"
-    line 1:                                     "Centenas de versões em muitos"
-    line 2:                                     "idiomas diferentes—a Bíblia que"
+    line 1:                                     "Centenas de versões em diversos"
+    line 2:                                     "idiomas - a Bíblia que"
     line 3:                                     "vai com você a qualquer lugar."
     download:                                   "Baixar Agora"
   about page:
@@ -591,7 +591,7 @@ pt-BR:
     h2:                                         "A Palavra de Deus está com você."
     h3:                                         "YouVersion é Global"
     h3 sub:                                     "Disponível em centenas de idiomas em todo o mundo."
-    main:                                       "Dezenas de milhões de pessoas estão usando o Aplicativo da Bíblia™ para tornar a Palavra de Deus parte de suas vidas. Baixe o aplicativo gratuito e acesse os seus marcadores, notas e planos de leitura de qualquer lugar. Desfrute de centenas de versões, incluindo áudio, tudo em seu dispositivo móvel."
+    main:                                       "Dezenas de milhões de pessoas estão usando o Aplicativo da Bíblia™ para tornar a Palavra de Deus parte de suas vidas. Baixe o aplicativo gratuito e acesse os seus marcadores, anotações e planos de leitura de qualquer lugar. Desfrute de centenas de versões, incluindo áudio, tudo em seu dispositivo móvel."
     button h4:                                  "Ir para youversion.com/download"
     button h4 sub:                              "No Seu Dispositivo Móvel"
     download now:                               "Baixar o Aplicativo da Bíblia Agora"
