--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -356,8 +356,10 @@ en:
       avatar file:                              "Select a file for your picture"
       avatar help:                              "Images can be in JPG, PNG, or GIF format. Your image will be converted to a 48x48 thumbnail. The maximum file size is 1MB."
       picture error:                            "Sorry, there was an error updating your picture."
+      picture_empty:                            "Please select a picture to upload"
       picture_too_large:                        "Picture should be less than 1 megabyte"
       picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
+      picture_creation form errors:             "The following error(s) prevented updating your picture:"
       updated picture:                          "Success! You've updated your picture."
       updated notifications:                    "Success! You've updated your notification settings."
       notification errors:                      "The following error(s) prevented updating your notifications:"
